src/SearchGenerator.module.css
.Header{
    width:100%;
    height:5vh;
    background-color: #282626;
    width: 100%;
    color: #fff;
    text-align: right;
    font-size: clamp(2rem, 0.4063rem + 2.6389vw, 2.1875rem);
    font-family: Helvetica, sans-serif;
    font-weight: 300;
    padding: 1%;
    padding-right: 15%;
}

.Heading {
    font-size: clamp(2rem, 0.481rem + 6.2319vw, 4.6875rem);
    font-family: Helvetica, sans-serif;
    font-weight: 700;
    letter-spacing: 0.02%;
    color: #FFFFFF;
    margin-bottom: 0;
    
}
.Container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    align-items: center;
    margin:0;
    padding:0;
    
}

.Display{
    padding: 3%;
    margin: 0;
    display: flex;
    align-items: flex-start;
    color: #FFFFFF;
    background-color: #282626;
    width: min(85%, 90vw);
    height: min(70%, 90vh);
    font-size: clamp(1rem, 0.3288rem + 2.7536vw, 2.1875rem);
    font-family: Helvetica, sans-serif;
    line-height: 1.5;
}

.Buttons{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 90%;
    font-size: clamp(0.75rem, 0.3614rem + 1.5942vw, 1.4375rem);
    font-family: Helvetica, sans-serif;
    padding: 10px;
    border-radius: 15px;
    
}

.BottomButtons{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 95%;
    font-size: clamp(0.95rem, 0.3614rem + 1.5942vw, 1.4375rem);
    font-family: Helvetica, sans-serif;
    padding: 10px;
    border-radius: 15px;
    margin-bottom: 2%;
    
}
.Inputs{
    display:flex;
    flex-direction: column;
    padding: inherit;
    width: max(40%,2vw)
}
::placeholder {
    color: #FFFFFF; 
}

.Include {
    background-color: #71B7FB;
    color: #FFFFFF;
    margin-bottom: 5%;
    padding: inherit;
    font-size: inherit;
    font-family: inherit;
}
.IncludeButton {
    background-color: #71B7FB;
    color: #FFFFFF;
    padding: inherit;
    font-size: inherit;
    font-family: inherit;
    border-radius: 15px;
    width: 60%;
    align-self: center;
}

.IncludeButton:hover {
    background-color: #3687d8;
    text-decoration: none;
    cursor: pointer;
}

.Exclude {
    background-color: #B65A40;
    color: #FFFFFF;
    margin-bottom: 5%;
    padding: inherit;
    font-size: inherit;
    font-family: inherit;
}
.ExcludeButton {
    background-color: #B65A40;
    color: #FFFFFF;
    padding: inherit;
    font-size: inherit;
    font-family: inherit;
    border-radius: 15px;
    width: 60%;
    align-self: center;
}
.ExcludeButton:hover {
    background-color: #943c24;
    text-decoration: none;
    cursor: pointer;
}

.Clear{
    background-color: #D94141;
    color: #FFFFFF;
    font-size: inherit;
    font-family: inherit;
    padding: inherit;
    width: 15%;
    border-radius: inherit;
}
.Clear:hover {
    background-color: #9b1b1b;
    text-decoration: none;
    cursor: pointer;
}


.Save{
    background-color: #33B58A;
    color: #FFFFFF;
    font-size: inherit;
    font-family: inherit;
    padding: inherit;
    width: 15%;
    border-radius: inherit;
}

.Save:hover {
    background-color: #058b5f;
    text-decoration: none;
    cursor: pointer;
}



.Load{
    background-color: #71B7FB;
    color: #FFFFFF;
    font-size: inherit;
    font-family: inherit;
    padding: inherit;
    width: 15%;
    border-radius: inherit;
}

.Load:hover,
.Load:focus {
    background-color: #3687d8;
    text-decoration: none;
    cursor: pointer;
}

.Copy{
    background-color: #BBBCBD;
    color: #FFFFFF;
    font-size: inherit;
    font-family: inherit;
    padding: inherit;
    width: 15%;
    border-radius: inherit;
}
.Copy:hover {
    background-color: #5f6265;
    text-decoration: none;
    cursor: pointer;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(10, 10, 10, 0.5);
}

.modalContent {
    background-color: #282c34;
    color:rgb(238, 238, 238);
    border: #282626 solid;
    margin: 15% auto;
    padding: 3%;
    width: 40%;
    font-size: clamp(1.125rem, 0.5938rem + 2.3611vw, 2.1875rem);
    font-family: Helvetica, sans-serif;
    font-weight: 300;
}

.close {
    color: #f7f3f3;
    float: right;
    font-size: clamp(1.25rem, 0.625rem + 2.7778vw, 2.5rem);
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: rgb(157, 82, 82);
    text-decoration: none;
    cursor: pointer;
}

